k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snus
  labels:
    app.kubernetes.io/part-of: distributed-sensor-monitoring
