k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: snus
  labels:
    app: notification-service
    app.kubernetes.io/part-of: distributed-sensor-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: snus/notification:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: snus
  labels:
    app: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - port: 8080
      targetPort: 8080
      name: http
